--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,13 +22,15 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Merabatte Houssem Eddine</span>
+                    Hi, I'm <span>BIG DICK SAM</span>
                     A Web Developer.
                 </h1>
                 <p>
-                    I'm a Web Developer, I love to create beautiful and functional websites.
+
+                    I'm a Web Developer, I love thicc hoes and redheads and have a 25cm dick  happy to help :D
+                    <!-- I'm a Web Developer, I love to create beautiful and functional websites.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut! -->
                 </p>
                 <div class="btn-con">
                     <a href="" class="main-btn">
