--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,15 +22,14 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>BIG DICK SAM</span>
+                    Hi, I'm <span>Merabatte Houssem Eddine</span>
                     A Web Developer.
                 </h1>
                 <p>
 
-                    I'm a Web Developer, I love thicc hoes and redheads and have a 25cm dick  happy to help :D
-                    <!-- I'm a Web Developer, I love to create beautiful and functional websites.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut! -->
+                   
+                  I'm a Web Developer, I love to create beautiful and functional websites.
+                   
                 </p>
                 <div class="btn-con">
                     <a href="" class="main-btn">
@@ -44,7 +43,7 @@
     <main>
         <section class="container about" id="about">
             <div class="main-title">
-                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+                <h2>About <span>me</span></h2>
             </div>
             <div class="about-container">
                 <div class="left-about">
@@ -217,7 +216,7 @@
         </section>
         <section class="container" id="portfolio">
             <div class="main-title">
-                <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
+                <h2>My <span>Portfolio</span></h2>
             </div>
             <p class="port-text">
                 Here is some of my work that I've done in various programming languages.
@@ -361,7 +360,7 @@
         <section class="container" id="blogs">
             <div class="blogs-content">
                 <div class="main-title">
-                    <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
+                    <h2>My <span>Blogs</span></span></h2>
                 </div>
                 <div class="blogs">
                     <div class="blog">
@@ -442,7 +441,7 @@
         <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
-                    <h2>Contact <span>Me</span><span class="bg-text">Contact</span></h2>
+                    <h2>Contact <span>Me</span></h2>
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
