--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,5 @@
+
+
 * {
   margin: 0;
   padding: 0;
@@ -195,7 +197,7 @@ section {
   padding-right: 18rem;
 }
 .header-content .right-header .name {
-  font-size: 3rem;
+  font-size: 2.4rem;
 }
 .header-content .right-header .name span {
   color: var(--color-secondary);
@@ -208,13 +210,13 @@ section {
 /*About*/
 .about-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   padding-top: 3.5rem;
   padding-bottom: 5rem;
 }
 .about-container .right-about {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4,1fr);
   grid-gap: 2rem;
 }
 .about-container .right-about .about-item {
@@ -274,7 +276,7 @@ section {
 }
 .about-stats .progress-bars {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 2rem;
 }
 .about-stats .progress-bars .progress-bar {
