--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
                        
                   
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="/download" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
