--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,19 +28,15 @@
                <br><br><br>    
                         <h4 class="name"><span>Information About me</span></h4>
                         <p>
-                            I'm a Web Developer, I love to create beautiful and functional websites.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, 
-                            vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
-                            delectus dolore fugiat exercitationem a, 
-                            ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                            Harum non necessitatibus deleniti eum soluta.
+                            
+                            I'm a web developer from Algiers, algeria. Currently a freelance back end web dev
+                            . In my spare time I enjoy DIY, gaming and building my own 
+                            projects. My preferred tools are PHP, Laravel and nodejs,express.
                         </p>
                        
                   
                 <div class="btn-con">
-                    <a href="/download" class="main-btn">
+                    <a href="/download" class="main-btn" style="margin:auto;">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -302,58 +298,66 @@
                 <div class="contact-content-con">
                     <div class="left-contact">
                         <h4>Contact me here</h4>
-                        <p>
+                        <!-- <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             In, laborum numquam? Quam excepturi perspiciatis quas quasi.
-                        </p>
+                        </p> -->
                         <div class="contact-info">
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-map-marker-alt"></i>
-                                    <span>Location</span>
+                                    <span>Location: </span>
                                 </div>
                                 <p>
-                                    : London, united Kingdom
+                                    Alger, Algerie
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-envelope"></i>
-                                    <span>Email</span>
+                                    <span>Email: </span>
                                 </div>
                                 <p>
-                                    <span>: maclinzuniversal@gmail.com</span>
+                                    <span>houssememrbt@gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-user-graduate"></i>
-                                    <span>Education</span>
+                                    <span>Education:</span>
                                 </div>
                                 <p>
-                                    <span>: Sussex University, East Sussex</span>
+                                    <span>ISIL , USTHB</span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fas fa-user-graduate"></i>
-                                    <span>Mobile Number</span>
+                                    <i class="fas fa-mobile"></i>
+                                    <span>Mobile Number: </span>
                                 </div>
                                 <p>
-                                    <span>: 07522670617</span>
+                                    <span>0553412503</span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-globe-africa"></i>
-                                    <span>Languages</span>
+                                    <span>Languages: </span>
                                 </div>
                                 <p>
-                                    <span>: Arabic, English, French</span>
+                                    <span>Arabic, English, French</span>
                                 </p>
                             </div>
                         </div>
-                        <div class="contact-icons">
+
+                        <div class="submit-btn" style="width:236.2px;margin:auto">
+                        <a href="/download" class="main-btn">
+                            <span class="btn-text">Download CV</span>
+                            <span class="btn-icon"><i class="fas fa-download"></i></span>
+                        </a>
+                        </div>
+
+                        <!-- <div class="contact-icons">
                             <div class="contact-icon">
                                 <a href="www.facebook.com" target="_blank">
                                     <i class="fab fa-facebook-f"></i>
@@ -368,26 +372,29 @@
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="right-contact">
                         <form action="" class="contact-form">
                             <div class="input-control i-c-2">
-                                <input type="text" required placeholder="YOUR NAME">
-                                <input type="email" required placeholder="YOUR EMAIL">
+                                <input  name="name" type="text" required placeholder="YOUR NAME">
+                                <input name="mail" type="email" required placeholder="YOUR EMAIL">
                             </div>
                             <div class="input-control">
-                                <input type="text" required placeholder="ENTER SUBJECT">
+                                <input name="subject" type="text" required placeholder="ENTER SUBJECT">
                             </div>
                             <div class="input-control">
-                                <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
+                                <textarea name="textarea" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
-                            <div class="submit-btn">
-                                <a href="#" class="main-btn">
-                                    <span class="btn-text">Download CV</span>
-                                    <span class="btn-icon"><i class="fas fa-download"></i></span>
-                                </a>
+                          
+                            <div type class="submit-btn" style="width:236.2px;margin:auto;">    
+                                <button type="submit" style="background-color:transparent;cursor: pointer;" class="main-btn">   
+                                    <span class="btn-text" >Send</span>
+                                    <span class="btn-icon"><i class="fas fa-check"></i></span>  
+                                </button>
                             </div>
+                       
+                           
                         </form>
                     </div>
                 </div>
