--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,12 +35,14 @@
                         </p>
                        
                   
-                <div class="btn-con">
+                <div class="btn-con" style="margin-left: 20%;">
                     <a href="/download" class="main-btn" style="margin:auto;">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
                 </div>
+
+                
             </div>
         </div>
     </header>
@@ -297,7 +299,7 @@
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
-                        <h4>Contact me here</h4>
+                        <h4>Contact me here:</h4>
                         <!-- <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             In, laborum numquam? Quam excepturi perspiciatis quas quasi.
