--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/hero.png" alt="">
+                    <img src="img/w.gif" style=" max-width: auto;  max-height: auto; display:block;" alt="">
                 </div>
             </div>
             <div class="right-header">
@@ -419,9 +419,6 @@
         <div class="control" data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div>
-    </div>
-    <div class="theme-btn">
-        <i class="fas fa-adjust"></i>
     </div>
     <script src="app.js"></script>
 </body>
